--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     
   <div class="container-fluid mt-5"></div>
   <div id="aboutus">
-  <div class="container text-white-50">      
+  <div class="container black">      
       <div class="row">      
        <div class="about-col-1">       
         </div>
