--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">A.K.A CREATIVES</a>
+            <div class="ourlogo">
+                <img src="images/logo.jpg" alt="Our Logo">
+            </div>
+            
+          <a class="navbar-brand"> &nbsp; A.K.A CREATIVES</a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,7 +23,7 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            
+
               <li class="nav-item">
                 <a class="nav-link" href="#home">Home</a>
               </li>
