--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                         <div class="row">
                                             <div class="col-lg-2 col-md-12 col-8">
                                                 <div class="about-img">
-                                                    <img src="images/ARAIN.JPG" alt="" width="200">
+                                                    <img src="images/ARAIN.jpg" alt="" width="200">
                                                 </div>
                                             </div><br><br><br><br><br>
 
@@ -219,7 +219,7 @@
                                             <div class="row">
                                                 <div class="col-lg-2 col-md-12 col-8 mt-5">
                                                     <div class="about-img">
-                                                        <img src="images/KIM.JPG" alt="" width="200">
+                                                        <img src="images/KIM.jpg" alt="" width="200">
                                                     </div>
                                                 </div>
                                                 <div class="about-text col-8 ">
@@ -233,7 +233,7 @@
                                                 <div class="row">
                                                     <div class="col-lg-2 col-md-12 col-8 mt-5">
                                                         <div class="about-img">
-                                                            <img src="images/AIZA.JPG" alt="" width="200" >
+                                                            <img src="images/AIZA.jpg" alt="" width="200" >
                                                         </div>
                                                     </div>
                                                     <div class="about-text col-8">
