--- a/ResponsiveLayout.html
+++ b/ResponsiveLayout.html
@@ -68,7 +68,7 @@
         <div class="col-md-3 col-6">
             <div>
                 <img src="images/us.jpg" alt="" class="w-100">
-                <p> Johanna, Ingeane, Daisy </p>
+                <p> We are from BSIT-1D </p>
         </div>
     </div>
     
@@ -76,7 +76,7 @@
             <div class="col-md-3 col-6">
                 <div>
                     <img src="images/us.jpg" alt="" class="w-100">
-                    <p> Johanna, Ingeane, Daisy </p>
+                    <p> We are from BSIT-1D </p>
                  </div>
             </div>
 
@@ -84,14 +84,14 @@
                 <div class="col-md-3 col-6">
                     <div>
                         <img src="images/us.jpg" alt="" class="w-100">
-                        <p> Johanna, Ingeane, Daisy </p>
+                        <p> We are from BSIT-1D </p>
                     </div>
                 </div>
 
                         <div class="col-md-3 col-6">
                             <div>
                                 <img src="images/us.jpg" alt="" class="w-100">
-                                <p>Johanna, Ingeane, Daisy</p>
+                                <p> We are from BSIT-1D </p>
                             </div>
                         </div>
                     
